--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "ext-json": "*",
-    "php": "^7.0||^8.0",
+    "php": "^8.2",
     "phpoffice/phpspreadsheet": "^1.29.1",
     "illuminate/support": "5.8.*||^6.0||^7.0||^8.0||^9.0||^10.0||^11.0",
     "psr/simple-cache": "^1.0||^2.0||^3.0",
@@ -52,6 +52,6 @@
       }
     }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true
 }
